--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -63,6 +63,8 @@
       </header>
       <section>
         <h1>Some of my intrests:</h1>
+
+        <p>test</p>
         <ul>
           <li>Coding</li>
           <li>Sharing what I've learned</li>
