--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,6 +31,7 @@
   </header>
   <main>
     <section id="articles" class="tab-content">
+
       <div>
         <ul id="filters">
           <li>
@@ -45,6 +46,7 @@
           </li>
         </ul>
       </div>
+
       <article class="template" data-category="cat">
         <header>
           <h1>Title</h1>
@@ -77,6 +79,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="scripts/blogArticles.js"></script>
   <script src="scripts/article.js"></script>
+  <script type="text/javascript" src="scripts/articleView.js">
+
+  </script>
   <!-- TODO: Link our new script file in. -->
 </body>
 </html>
