--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -55,6 +55,7 @@
         </header>
         <section class="article-body"></section>
         <a href="#" class="read-on">Read on &rarr;</a>
+        
       </article>
     </section>
     <section id="about" class="tab-content">
@@ -77,6 +78,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="scripts/blogArticles.js"></script>
   <script src="scripts/article.js"></script>
+  <script src="scripts/articleView.js"></script>
   <!-- TODO: Link our new script file in. -->
 </body>
 </html>
