--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -55,7 +55,8 @@
         </header>
         <section class="article-body"></section>
         <a href="#" class="read-on">Read on &rarr;</a>
-        
+        <a href="#" class="show-less">Show less &larr;</a>
+
       </article>
     </section>
     <section id="about" class="tab-content">
